[package]
name = "cloudbbq-homie"
version = "0.1.3"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Service to connect to barbecue thermometers over Bluetooth and report their readings to an MQTT broker following the Homie convention."
repository = "https://github.com/qwandor/cloudbbq-homie/"
keywords = ["bbq", "ble", "bluetooth", "homie", "mqtt"]
categories = ["network-programming"]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
color-backtrace = "0.5.1"
cloudbbq = "0.3.0"
bluez-async = "0.7.2"
eyre = "0.6.8"
futures = "0.3.27"
futures-channel = "0.3.28"
homie-device = "0.8.0"
itertools = "0.11.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
rumqttc = "0.20.0"
rustls = "0.20.8"
rustls-native-certs = "0.6.3"
serde_derive = "1.0.118"
serde = "1.0.164"
stable-eyre = "0.2.1"
tokio = { version = "1.28.2", features = ["io-util", "macros", "rt-multi-thread"] }
toml = "0.7.4"
url = { version = "2.4.0", features = ["serde"] }

[package.metadata.deb]
# $auto doesn't work because we don't build packages in the same container as we build the binaries.
depends = "adduser, bluez, libc6, libsystemd0, libgcrypt20, libdbus-1-3, libgpg-error0, liblzma5, liblz4-1"
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/cloudbbq-homie/cloudbbq-homie.toml"]
assets = [
	["target/release/cloudbbq-homie", "usr/bin/", "755"],
	["cloudbbq-homie.example.toml", "etc/cloudbbq-homie/cloudbbq-homie.toml", "640"],
	["README.md", "usr/share/doc/cloudbbq-homie/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
